feat: add status transition maps for leave request management and update service implementation